k8s/certificate2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: api.sorteosc.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: springboot-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.sorteosc.com
      secretName: sorteosc-tls
