k8s/certificatecloudfare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      173.245.48.0/20,
      103.21.244.0/22,
      103.22.200.0/22,
      103.31.4.0/22,
      141.101.64.0/18,
      108.162.192.0/18,
      190.93.240.0/20,
      188.114.96.0/20,
      197.234.240.0/22,
      198.41.128.0/17,
      162.158.0.0/15,
      104.16.0.0/13,
      104.24.0.0/14,
      172.64.0.0/13,
      131.0.72.0/22,
      13.89.172.22  # ← IP pública de tu Azure WebApp (frontend)
spec:
  ingressClassName: nginx
  rules:
    - host: api.sorteosc.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: springboot-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.sorteosc.com
      secretName: sorteosc-tls
