k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.sorteosc.com  # Usar el dominio correcto
      secretName: sorteosc-tls  # Nombre del certificado SSL
  rules:
    - host: api.sorteosc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-app-service
                port:
                  number: 8086  # Cambiar a 8086 para que coincida con el puerto real del pod
